--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
+    "log4js": "^4.0.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
