--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "log4js": "^4.0.1",
     "mongoose": "^5.4.9",
