--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "ger": "0.0.99",
     "helmet": "^3.15.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
